<resources>
    <string name="app_name" translatable="false">SmartAlert</string>
    <string name="welcome">welcome</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="password_login">password login</string>
    <string name="email">email</string>
    <string name="last_name">last name</string>
    <string name="phone_number">phone number</string>
    <string name="first_name">first name</string>
    <string name="password">password</string>
    <string name="confirm">confirm</string>
    <string name="email_signUp">email</string>
    <string name="log_out">Log Out</string>
    <string name="messages">Messages</string>
    <string name="flood">flood</string>
    <string name="earthquake">earthquake</string>
    <string name="tornado">tornado</string>
    <string name="something_n_else">something_n_else</string>
    <string name="extreme_nweather_n_conditions">Extreme\nweather\n conditions</string>
    <string name="report_an_incident">report_an_incident</string>
    <string name="welcome_User">Welcome</string>
    <string name="fire">fire</string>
    <string name="Report_incident">Report Incident</string>
    <string name="country">country</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="describe_the_incident">Describe the incident</string>
    <string name="choose_image">choose_image</string>
    <string name="upload">upload</string>
    <string name="send">Send</string>
    <string name="welcome_employee">Welcome</string>
    <string name="choose_an_activity">choose_an_activity</string>
    <string name="report_incident_employee">Report Incident</string>
    <string name="messages_employee">messages</string>
    <string name="log_out_employee">log_out</string>
    <string name="messages_employee2">Messages</string>
    <string name="delete">delete</string>
    <string name="accept">accept</string>
    <string name="report_incident_employee2">report_incident</string>
    <string name="title">title</string>
    <string name="latitude_employee">latitude</string>
    <string name="longitude_employee">longitude</string>
    <string name="max_distance">max_distance</string>
    <string name="date_employee">date</string>
    <string name="time_employee">time</string>
    <string name="describe_the_incident_employee">describe_the_incident</string>
    <string name="send_employee">send</string>
    <string name="back">back</string>
    <string name="back_employee">back</string>
    <string name="back3">back</string>
    <string name="back_4">back</string>
</resources>