<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginEmployee">

    <TextView
        android:id="@+id/textView_WelcomeEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_employee"
        android:textColor="@color/purple_500"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ChooseActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="43dp"
        android:text="@string/choose_an_activity"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_WelcomeEmployee" />

    <Button
        android:id="@+id/button_Report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/report_incident_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ChooseActivity" />

    <Button
        android:id="@+id/button_Messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="17dp"
        android:text="@string/messages_employee"
        app:layout_constraintStart_toStartOf="@+id/button_Report"
        app:layout_constraintTop_toBottomOf="@+id/button_Report" />

    <Button
        android:id="@+id/button_LogOut_Employer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/log_out_employee"
        app:layout_constraintStart_toStartOf="@+id/button_Messages"
        app:layout_constraintTop_toBottomOf="@+id/button_Messages" />
</androidx.constraintlayout.widget.ConstraintLayout>