<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncidentUser">

    <Button
        android:id="@+id/button_Back"
        android:layout_width="96dp"
        android:layout_height="56dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="45dp"
        android:text="@string/back3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_Send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Image" />

    <TextView
        android:id="@+id/textView_Report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/Report_incident"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_Address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="gr"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView_Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="000000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView_Address2"
        app:layout_constraintTop_toBottomOf="@+id/textView_Address2" />

    <TextView
        android:id="@+id/textView_Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="000000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView_Latitude"
        app:layout_constraintTop_toBottomOf="@+id/textView_Latitude" />

    <TextView
        android:id="@+id/textView_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="00-00-0000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_Time"
        app:layout_constraintStart_toEndOf="@+id/textView_Time"
        app:layout_constraintTop_toBottomOf="@+id/textView_Longitude" />

    <TextView
        android:id="@+id/textView_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="21dp"
        android:text="00:00"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView_Longitude"
        app:layout_constraintTop_toBottomOf="@+id/textView_Date" />

    <EditText
        android:id="@+id/editTextTextMultiLine_Description"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/describe_the_incident"
        android:inputType="textMultiLine"
        android:maxLength="40"
        app:layout_constraintBottom_toBottomOf="@+id/textView_Choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/button_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/upload"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Choose"
        app:layout_constraintStart_toEndOf="@+id/textView_Choose" />

    <TextView
        android:id="@+id/textView_Choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="146dp"
        android:layout_marginBottom="147dp"
        android:text="@string/choose_image"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button_Send"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="44dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Back"
        app:layout_constraintTop_toBottomOf="@+id/textView_Choose" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="textview"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView_Report"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="21dp"
        android:text="@string/latitude"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/longitude"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="21dp"
        android:text="@string/date"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/time"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:text="@string/country"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView_Report"
        app:layout_constraintTop_toBottomOf="@+id/textView_Report" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_Send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_Date"
        app:layout_constraintTop_toTopOf="@+id/button_Image" />

</androidx.constraintlayout.widget.ConstraintLayout>